--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,7 @@ button{
     }
 } 
 .soluçoes{
-  height: 70vh;
+  height: 80vh;
   justify-content:space-evenly;
   background-color: #D8D8D8;
   display: flex;
@@ -139,17 +139,31 @@ button{
         }
 
   section{
-  
-    display: flex;
+      display: flex;
+      width: 80%;
     justify-content: space-evenly
 
   }
    article{
     display: flex;
- border: bo;
-width: 22%;
+    background-color: white; 
+width: 22rem;
 flex-direction: column;
+height: 25rem; 
 
+h5{
+  font-size: 1.5rem;
+  font-family: "Oswald","sans-serif";
+  font-weight: 500;
+margin-left: 5%;
+}
+ p{
+  font-family: "Oswald","sans-serif";
+  font-size: 1.5em;
+  font-weight: 200;
+  margin-left: 5%;
+  height: 30rem;
+ }
 
    }
 }
