--- a/style.scss
+++ b/style.scss
@@ -51,21 +51,28 @@ header {
 
 main {
   .container_background_image {
+    font-family: "Oswald","sans-serif";
     height: 100vh;
     background-image: url("./imagens/background.png");  
     background-repeat: no-repeat;
         background-size: cover;
+        padding: 8rem;
 
 h1{
  padding-left: 4rem;
     font-size: 6rem;
     color: #FFFFFF;
     font-weight: 700;
+   margin-bottom: 5px; 
+   font-family: "Oswald","sans-serif";
 }
-p{
+p{ 
+  
     padding-left: 4rem;
     color: #FFFFFF;
-    font-family: "Oswald","sans-serif";
+    font-weight: 300;
+    margin-bottom: 25px;
+    
 }
 
 button{
@@ -77,6 +84,7 @@ button{
     width: 15.6rem;
     font-weight: 700;
     font-size: 1.5em;
+    margin-bottom: 15px;
 
 }
   }
@@ -88,14 +96,19 @@ button{
      padding: 3rem;
 
      div{
-        margin-left: 3rem;
-        width: 30%;
+        margin-left: 7rem;
+        width: 26%;
+        
         h4{
         font-size: 1.5em;
         color: #0017E9; 
+        margin-bottom: 25px;
+
     }
      h2{
         font-size: 2.25em;
+        margin-bottom: 25px;
+        
         
 
      }
@@ -119,7 +132,7 @@ button{
     }
 } 
 .soluçoes{
-  height: 80vh;
+height: 70vw;
   justify-content:space-evenly;
   background-color: #D8D8D8;
   display: flex;
@@ -138,19 +151,22 @@ button{
 
         }
 
-  section{
+section{
       display: flex;
       width: 80%;
     justify-content: space-evenly
 
   }
-   article{
-    display: flex;
+article{
+display: flex;
     background-color: white; 
 width: 22rem;
 flex-direction: column;
 height: 25rem; 
+margin-bottom: 15px;
 
+
+   }
 h5{
   font-size: 1.5rem;
   font-family: "Oswald","sans-serif";
@@ -162,8 +178,40 @@ margin-left: 5%;
   font-size: 1.5em;
   font-weight: 200;
   margin-left: 5%;
-  height: 30rem;
- }
 
    }
+
+}
+
+.Atendimento{
+    display: flex;
+  padding-top: 2rem;
+
+
+
+  h2{
+    margin-bottom: 15px;
+    width: 21em;
+    margin-left: 5%;
+   height: 2rem;
+   align-items: center;
+   font-family: "Oswald","sans-serif";
+   color:   #0017E9;
+
+  }
+
+  h3{
+    margin-bottom: 15px;
+    font-family: "Oswald","sans-serif";
+    width: 28rem;
+    margin-left: 5%;    
+    
+  }
+
+div{
+  display: flex; 
+  margin-left: 5%;
+  
+}
+
 }
